Bug 110431 - FILEOPEN: calc listbox entries are lost on open *.ods file
Summary: FILEOPEN: calc listbox entries are lost on open *.ods file
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: All Windows (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0 target:5.4.4
Keywords: bibisected, bisected, regression
: 111823 112206 112299 112459 113282 (view as bug list)
Depends on:
Blocks: FastParser-regressions
  Show dependency treegraph
 
Reported: 2017-07-30 08:29 UTC by Oliver Brinzing
Modified: 2022-09-30 12:22 UTC (History)
14 users (show)

See Also:
Crash report or crash signature:


Attachments
listbox demo created with lo 5.2.7 (8.37 KB, application/vnd.oasis.opendocument.spreadsheet)
2017-07-30 08:29 UTC, Oliver Brinzing
Details
lost listboxes entries (158.16 KB, application/vnd.oasis.opendocument.spreadsheet-template)
2017-09-26 12:11 UTC, Alberto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Brinzing 2017-07-30 08:29:46 UTC
Created attachment 134990 [details]
listbox demo created with lo 5.2.7

starting with LO 5.4.0.3 listbox entries are lost on fileopen.
worked in LO 5.3.4.2

steps to reproduce:
- open attached *.ods file created with LO 5.2.7
  the file contains a listbox with two entries.

version 6.0.0.0.alpha0+ Build ID: ec340697d682bd7d0a361c8c701e513329c032bd
is also affected.
Comment 1 raal 2017-07-30 14:09:25 UTC
I cannot confirm with Version: 6.0.0.0.alpha0+
Build ID: e0bafa78e3ad0df397d78cd65ad19bd5b07dc5f2
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-07-20_22:42:49


windows only; Version: 6.0.0.0.alpha0+
Comment 2 raal 2017-07-30 15:54:29 UTC
This seems to have begun at the below commit.
Adding Cc: to Mohammed Abdul Azeem; Could you possibly take a look at this one? Thanks

 90bca3d4826e7c12e7ce570f5d64fad7482a9b4f is the first bad commit
commit 90bca3d4826e7c12e7ce570f5d64fad7482a9b4f
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sat Feb 11 11:20:15 2017 -0800

    source 8154953add163554c00935486a1cf5677cef2609

author	Mohammed Abdul Azeem <azeemmysore@gmail.com>	2016-09-05 09:08:30 (GMT)
committer	Michael Meeks <michael.meeks@collabora.com>	2017-01-25 11:20:48 (GMT)
commit 8154953add163554c00935486a1cf5677cef2609 (patch)
tree d8e148e84aa1e164a2358827085f4d9240ce5e31
parent 657eea01046c7f39ee8ca4545241372177385946 (diff)
ScXMLTableRowCellContext implements fast interfaces:
Comment 3 Xisco Faulí 2017-08-20 15:48:00 UTC
*** Bug 111823 has been marked as a duplicate of this bug. ***
Comment 4 raal 2017-09-09 18:23:57 UTC
*** Bug 112299 has been marked as a duplicate of this bug. ***
Comment 5 raal 2017-09-18 19:20:21 UTC
*** Bug 112459 has been marked as a duplicate of this bug. ***
Comment 6 Alberto 2017-09-26 12:11:16 UTC
Created attachment 136543 [details]
lost listboxes entries

I've noticed similar behavior with this file: when I open the file all the listboxes are empties.

Thanks for your help.

Alberto
Comment 7 raal 2017-10-08 19:57:22 UTC
*** Bug 112206 has been marked as a duplicate of this bug. ***
Comment 8 m.a.riosv 2017-10-12 15:44:19 UTC
I'm not sure it can be considered critical but at least a major issue.
Comment 9 gioni 2017-10-12 17:59:51 UTC
(In reply to m.a.riosv from comment #8)
> I'm not sure it can be considered critical but at least a major issue.

If you have some files, each one with 70-80 listbox "corrupted", then you would understand.
Comment 10 frederic-scherer 2017-10-14 14:17:58 UTC
I totally agree with gioni: this bug is very annoying!
I have a lot of spreadsheets with listboxes and since this bug, I don't upgrade LO anymore. Currently I'm still working with 5.3.3.2!
Comment 11 pscitz 2017-10-19 07:21:33 UTC
This bug also affects cells' "linked cell" attribute when connected to form elements. After opening a spreadsheet I prepared in 5.3.3 in 5.4.0 none of the cells were adjusting their value (they were storing a boolean to be used in a small script).

On inspection it turns out, that suddenly they don't have anything in the "linked cell" attribute field anymore.

Really annoying to have to change each boolean by hand now.
Comment 12 m.a.riosv 2017-10-20 08:53:44 UTC
*** Bug 113282 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2017-10-23 08:40:18 UTC
Mohammed Abdul Azeem committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=931c84e697dc69745d1c07c40f810638f9f71eda

tdf#110431: Fixed losing listbos entries on opening .ods file

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2017-10-23 09:30:05 UTC
Mohammed Abdul Azeem committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=000fbca705166237645bccf0b1c28164b076c043&h=libreoffice-5-4

tdf#110431: Fixed losing listbos entries on opening .ods file

It will be available in 5.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Michael Meeks 2017-10-23 09:49:40 UTC
Please verify this as/when we have a new master snapshot & thanks for reporting =)
Comment 16 m.a.riosv 2017-10-25 22:01:20 UTC
Thanks @Mohamed for solving it.
Version: 6.0.0.0.alpha1+
Build ID: 3c5fe72ac31d7ba65b04025b1635b711d68b77b3
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-10-25_00:02:15
Locale: es-ES (es_ES); Calc: CL