tdf#110431: Fixed losing listbos entries on opening .ods file

For some reason, XML_TOKEN_INVALID was taking wrong value
in windows, causing to fail imports with unknown entries.

I've also added some of the tokens I found from several
test files to the list.

Change-Id: Idd2e7db165b9b4b5a2d8c7a837786fde252fe938
Reviewed-on: https://gerrit.libreoffice.org/43677
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>